<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".LoginActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email_edit_text_login"
            android:layout_width="0dp"

            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_edit_text_register_login"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
         
        android:id="@+id/password_edit_text_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edit_text_register_login"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/email_edit_text_login"
        app:layout_constraintStart_toStartOf="@+id/email_edit_text_login"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text_login" />

        <Button
            android:id="@+id/login_button_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password_edit_text_login"
            app:layout_constraintStart_toStartOf="@+id/password_edit_text_login"
            app:layout_constraintTop_toBottomOf="@+id/password_edit_text_login"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>